@@ -2,6 +2,7 @@ Changes in <next version>:
  * Add GetColormap command to return RGBA values
  * Add Colormap sequence plugin for choosing colors of widgets
  * Add Covariance widget for plotting covariance ellipses
+ * Fix pick indices if non-finite values in data
 
 Changes in 1.24:
  * Text labels can now include Python expressions inside %{{ }}%
